--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,9 @@
                     <argLine>
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/1.9.24/aspectjweaver-1.9.24.jar"
                     </argLine>
+                    <includes>
+                        <include>*.java</include>
+                    </includes>
                 </configuration>
             </plugin>
         </plugins>
