--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,21 +20,34 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Run tests
-      run: mvn clean test
-    
-    - name: Generate Allure report
-      run: mvn allure:report
+      - uses: actions/checkout@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Run tests
+        run: mvn clean test
 
-    - name: Upload Allure report as an artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: allure-report
-        path: target/site/allure-maven-plugin
+        # Установка Allure Commandline
+      - name: Install Allure commandline
+        run: |
+          wget https://github.com/allure-framework/allure2/releases/download/2.35.1/allure-2.35.1.tgz
+          tar -xzf allure-2.35.1.tgz
+          sudo mv allure-2.35.1 /opt/allure
+          sudo ln -s /opt/allure/bin/allure /usr/bin/allure
+          allure --version
+
+        # Генерация HTML-отчета из результатов
+      - name: Generate Allure HTML report
+        run: |
+          ls -la target/allure-results
+          allure generate target/allure-results --clean -o target/allure-report
+
+        # Загрузка отчета как артефакт
+      - name: Upload Allure report
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-report
+          path: target/allure-report
