--- a/pom.xml
+++ b/pom.xml
@@ -118,14 +118,13 @@
                 <groupId>io.qameta.allure</groupId>
                 <artifactId>allure-maven</artifactId>
                 <version>2.16.1</version> <!-- Используйте актуальную версию -->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <goals>-->
-<!--                            <goal>generate</goal> &lt;!&ndash; Генерация отчета &ndash;&gt;-->
-<!--                            <goal>serve</goal> &lt;!&ndash; Для локального сервера (если нужно) &ndash;&gt;-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                </executions>-->
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>report</goal> <!-- Генерация отчета -->
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
